<resources>
    <string name="app_name">mapp</string>
    <string name="bluetooth_icon">Bluetooth icon</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="find">Find</string>
    <string name="pair">Get pair</string>
    <string name="n_available">Bluetooth is not available</string>
    <string name="is_available">Bluetooth is available</string>
    <string name="paired_dev">Paired Devices</string>
</resources>