<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/blstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black" />

    <!-- Image to show status    -->
    <ImageView
        android:id="@+id/blicon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/bluetooth_icon"
        android:layout_gravity="center"/>

    <!-- Button to turn on bluetooth  -->
    <Button
        android:id="@+id/switch_on"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:text="@string/turn_on"
        android:minWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Button to turn off bluetooth  -->
    <Button
        android:id="@+id/switch_off"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:text="@string/turn_off"
        android:minWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Button to discover bluetooth  -->
    <Button
        android:id="@+id/blfind"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:text="@string/find"
        android:minWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Get list of paired device button  -->
    <Button
        android:id="@+id/blpair"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:text="@string/pair"
        android:minWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Show paired device -->
    <TextView
        android:id="@+id/pair"
        android:layout_width="match_parent"
        android:text=""
        android:minWidth="200dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

</LinearLayout>